Change background to white before letter breakpoint

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-slate-300;
+  @apply bg-white letter:bg-slate-300;
   -webkit-print-color-adjust: exact !important;
   print-color-adjust: exact !important;
 }
