--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-family: 'Rubik', sans-serif;
+}
 body {
-  @apply bg-white letter:bg-slate-300;
+  @apply bg-white letter:bg-slate-300 print:bg-white;
   -webkit-print-color-adjust: exact !important;
   print-color-adjust: exact !important;
 }
