--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -8,7 +8,7 @@ html {
   font-family: 'Rubik', sans-serif;
 }
 body {
-  @apply bg-white letter:bg-slate-300 print:bg-white;
+  @apply bg-white letter:bg-slate-300 print:bg-white py-0 letter:py-10 print:py-0;
   -webkit-print-color-adjust: exact !important;
   print-color-adjust: exact !important;
 }
