--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -18,7 +18,7 @@ body {
 header {
   @apply  bg-emerald-400
           w-full
-          flex flex-col small:flex-row medium:flex-col print:flex-col
+          flex flex-col small:flex-row medium:flex-col print:small:flex-col
           justify-between
           p-4
 }
@@ -36,7 +36,7 @@ h2 {
 }
 
 .link {
-  @apply  flex flex-row small:flex-row-reverse medium:flex-row
+  @apply  flex flex-row small:flex-row-reverse medium:flex-row print:small:flex-row
           items-center
           gap-0.5
 }
